Twitter social meta tags

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Igor Antun</title>
 
     <meta name="author" content="Igor Antun">
-    <meta name="description" content="description here">
-    <meta name="keywords" content="keywords,here">
+    <meta name="description" content="An experienced front & backend developer and translator.">
 
     <link rel="shortcut icon" href="img/profile.jpg" type="img/icon">
+
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="@igorantun"/>
+    <meta name="twitter:title" content="Igor Antun"/>
+    <meta name="twitter:description" content="An experienced front & backend developer and translator."/>
+    <meta name="twitter:image" content="https://igorantun.github.io/site/img/profile.jpg"/>
 
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700,300,100' type='text/css'>
