--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html itemscope itemtype="http://schema.org/Person">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -10,6 +10,14 @@
     <meta name="description" content="An experienced front & backend developer and translator.">
 
     <link rel="shortcut icon" href="img/profile.jpg" type="img/icon">
+
+    <meta property="og:title" content="Igor Antun"/>
+    <meta property="og:description" content="An experienced front & backend developer and translator."/>
+    <meta property="og:image" content="https://igorantun.github.io/site/img/profile.jpg"/>
+
+    <meta itemprop="name" content="Igor Antun">
+    <meta itemprop="description" content="An experienced front & backend developer and translator.">
+    <meta itemprop="image" content="https://igorantun.github.io/site/img/profile.jpg">
 
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@igorantun"/>
