--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <link rel="shortcut icon" href="img/profile.jpg" type="img/icon">
 
     <meta property="og:title" content="Igor Antun"/>
+    <meta property="og:type" content="profile"/>
+    <meta property="og:url" content="https://igorantun.com"/>
+    <meta property="og:site_name" content="Igor Antun"/>
     <meta property="og:description" content="An experienced front & backend developer and translator."/>
     <meta property="og:image" content="https://igorantun.github.io/site/img/profile.jpg"/>
+    <meta property="fb:profile_id" content="766505113402696"/>
 
     <meta itemprop="name" content="Igor Antun">
     <meta itemprop="description" content="An experienced front & backend developer and translator.">
