Fix wrong og:url

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta property="og:title" content="Igor Antun"/>
     <meta property="og:type" content="profile"/>
-    <meta property="og:url" content="https://igorantun.com"/>
+    <meta property="og:url" content="http://igorantun.github.io/site/"/>
     <meta property="og:site_name" content="Igor Antun"/>
     <meta property="og:description" content="An experienced front & backend developer and translator."/>
     <meta property="og:image" content="https://igorantun.github.io/site/img/profile.jpg"/>
