--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <meta property="og:site_name" content="Igor Antun"/>
     <meta property="og:description" content="An experienced front & backend developer and translator."/>
     <meta property="og:image" content="https://igorantun.github.io/site/img/profile.jpg"/>
+
     <meta property="fb:profile_id" content="766505113402696"/>
+    <meta property="fb:admins" content="766505113402696"/>
 
     <meta itemprop="name" content="Igor Antun">
     <meta itemprop="description" content="An experienced front & backend developer and translator.">
@@ -25,6 +27,7 @@
 
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@igorantun"/>
+    <meta name="twitter:creator" content="@igorantun"/>
     <meta name="twitter:title" content="Igor Antun"/>
     <meta name="twitter:description" content="An experienced front & backend developer and translator."/>
     <meta name="twitter:image" content="https://igorantun.github.io/site/img/profile.jpg"/>
