Theme Color meta tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="An experienced front & backend developer and translator.">
 
     <link rel="shortcut icon" href="img/profile.jpg" type="img/icon">
+    <meta name="theme-color" content="#131314">
 
     <meta property="og:title" content="Igor Antun"/>
     <meta property="og:type" content="profile"/>
