--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <div class="col-1-4">
         <h3>
           <span style="color:#F3C110"><b>work</b></span>
+          <div class="status">   ● NOT AVAILABLE</div>
           <br>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin dignissim erat ultricies scelerisque. Vivamus non erat sit amet purus finibus lobortis at eu est.</span>
         </h3>
