Better layout for hire status

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <div class="middle">
         <h2><span>Igor Antun</span> <span class="blinking-cursor">|</span></h2>
         <h4>programmer & translator</h4>
+        <div class="status">● NOT AVAILABLE FOR HIRE</div>
       </div>
     </div>
 
@@ -60,7 +61,6 @@
       <div class="col-1-4">
         <h3>
           <span style="color:#F3C110"><b>work</b></span>
-          <div class="status">   ● NOT AVAILABLE</div>
           <br>
           <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin dignissim erat ultricies scelerisque. Vivamus non erat sit amet purus finibus lobortis at eu est.</span>
         </h3>
