Improving CSS and adding correct texts

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div id="description">
-      <h3><span><b>Hello!</b> I'm an experienced front & backend developer and translator.</span></h3>
+      <h3><span><b>Hello!</b> I'm an experienced front & backend developer and translator based in Brazil.</span></h3>
     </div>
 
     <div class="grid grid-pad texts">
@@ -62,15 +62,15 @@
         <h3>
           <span style="color:#F3C110"><b>work</b></span>
           <br>
-          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin dignissim erat ultricies scelerisque. Vivamus non erat sit amet purus finibus lobortis at eu est.</span>
+          <span>I work mostly as a part-time developer, but I'm also likely to accept freelance work, depending on my availability. I also like to contribute to open-source projects in my spare time.</span>
         </h3>
       </div>
 
       <div class="col-1-4">
         <h3>
-          <span style="color:#B5D045"><b>education</b></span>
+          <span style="color:#B5D045"><b>translations</b></span>
           <br>
-          <span>Vivamus vitae lacus in lacus pharetra tempus. Etiam aliquet accumsan malesuada. Nulla ipsum urna, iaculis eu convallis in, ultrices ac magna. Vestibulum tincidunt pellentesque augue eget laoreet.</span>
+          <span>I speak Portuguese and English fluently, and I'm currently learning German. I've helped translate projects such as Popcorn Time, plug.dj, Reddit and Tomahawk.</span>
         </h3>
       </div>
 
@@ -78,7 +78,7 @@
         <h3>
           <span style="color:#FB8335"><b>experience</b></span>
           <br>
-          <span>Mauris vel nunc in erat ullamcorper sodales eu ac justo. Vivamus a imperdiet enim, eget commodo quam. Morbi in pulvinar justo, sed ultrices sem.</span>
+          <span>I have built some interesting projects, including NodeChat, a real-time web chat, Unsplashify, a desktop application and more. I have also contributed to various open-source projects.</span>
         </h3>
       </div>
 
@@ -86,7 +86,7 @@
         <h3>
           <span style="color:#81C0C5"><b>skills</b></span>
           <br>
-          <span>Morbi a risus tempor, venenatis eros consectetur, sollicitudin erat. Nunc bibendum leo id vehicula rutrum. Duis porttitor faucibus feugiat. Aliquam tempor aliquet ultricies.</span>
+          <span>I work mostly with Javascript, using the MEAN Stack (MongoDB, Express, Angular & Node.JS), but I also have average experience with C++ and other languages. I use Linux and Sublime Text + Git for development.</span>
         </h3>
       </div>
     </div>
@@ -97,6 +97,8 @@
       <a id="github" target="_blank" href="https://github.com/IgorAntun">Github</a>
       <a id="linkedin" target="_blank" href="https://linkedin.com/in/igorantun">LinkedIn</a>
       <a id="stackoverflow" target="_blank" href="https://stackoverflow.com/users/4677119/igor-antun">Stack Overflow</a>
+      <br><br>
+      <a style="color:#b19cd9" target="_blank" href="mailto:hello@igorantun.com">hello at igorantun dot com</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
