--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
 
     <meta property="og:title" content="Igor Antun"/>
     <meta property="og:type" content="profile"/>
-    <meta property="og:url" content="http://igorantun.github.io/site/"/>
+    <meta property="og:url" content="http://igorantun.com/"/>
     <meta property="og:site_name" content="Igor Antun"/>
     <meta property="og:description" content="An experienced front & backend developer and translator."/>
-    <meta property="og:image" content="https://igorantun.github.io/site/img/profile.jpg"/>
+    <meta property="og:image" content="http://igorantun.com/img/profile.jpg"/>
 
     <meta property="fb:profile_id" content="100001296438887"/>
     <meta property="fb:admins" content="100001296438887"/>
 
     <meta itemprop="name" content="Igor Antun">
     <meta itemprop="description" content="An experienced front & backend developer and translator.">
-    <meta itemprop="image" content="https://igorantun.github.io/site/img/profile.jpg">
+    <meta itemprop="image" content="http://igorantun.com/img/profile.jpg">
 
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@igorantun"/>
     <meta name="twitter:creator" content="@igorantun"/>
     <meta name="twitter:title" content="Igor Antun"/>
     <meta name="twitter:description" content="An experienced front & backend developer and translator."/>
-    <meta name="twitter:image" content="https://igorantun.github.io/site/img/profile.jpg"/>
+    <meta name="twitter:image" content="http://igorantun.com/img/profile.jpg"/>
 
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700,300,100' type='text/css'>
@@ -102,15 +102,13 @@
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="js/particles.js"></script>
-    <script type="text/javascript">
-     var _gaq = _gaq || [];
-     _gaq.push(['_setAccount', 'UA-XXXXXXXX-Y']);
-     _gaq.push(['_trackPageview']);
-     (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-55923309-1', 'auto');
+      ga('send', 'pageview');
     </script>
   </body>
 </html>
