Changing some wording

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700,300,100' type='text/css'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Josefin+Slab' type='text/css'>
 
     <link rel="stylesheet" href="css/simplegrid.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -54,7 +53,7 @@
     </div>
 
     <div id="description">
-      <h3><span><b>Hello!</b> I'm an experienced front & backend developer and translator based in Brazil.</span></h3>
+      <h3><span><b>Hello!</b> I'm an experienced front & backend developer and translator based in Brazil. How may I help you?</span></h3>
     </div>
 
     <div class="grid grid-pad texts">
@@ -70,7 +69,7 @@
         <h3>
           <span style="color:#B5D045"><b>translations</b></span>
           <br>
-          <span>I speak Portuguese and English fluently, and I'm currently learning German. I've helped translate projects such as Popcorn Time, plug.dj, Reddit and Tomahawk.</span>
+          <span>I speak Portuguese and English fluently, and I'm currently learning German. I've helped translate projects such as Popcorn Time, plug.dj, Reddit and Tomahawk to Portuguese.</span>
         </h3>
       </div>
 
@@ -78,7 +77,7 @@
         <h3>
           <span style="color:#FB8335"><b>experience</b></span>
           <br>
-          <span>I have built some interesting projects, including NodeChat, a real-time web chat, Unsplashify, a desktop application and more. I have also contributed to various open-source projects.</span>
+          <span>I have built some interesting projects, going from real-time web chats to full desktop applications. I have also contributed to various open-source projects, including games and libraries.</span>
         </h3>
       </div>
 
