--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <div id="bg"></div>
 
     <div id="intro">
-      <img src="img/profile.jpg"></img>
+      <img id="photo" src="img/profile.jpg"></img>
       <div class="middle">
-        <h2><span>Igor Antun</span> <span class="blinking-cursor">|</span></h2>
-        <h4>programmer & translator</h4>
-        <div class="status">● NOT AVAILABLE FOR HIRE</div>
+        <h2><span id="name">Igor Antun</span> <span class="blinking-cursor">|</span></h2>
+        <h4 id="subtitle">programmer & translator</h4>
+        <div id="status">● NOT AVAILABLE FOR HIRE</div>
       </div>
     </div>
 
@@ -61,7 +61,7 @@
         <h3>
           <span style="color:#F3C110"><b>work</b></span>
           <br>
-          <span>I work mostly as a part-time developer, but I'm also likely to accept freelance work, depending on my availability. I also like to contribute to open-source projects in my spare time.</span>
+          <span id="work-text">I work mostly as a part-time developer, but I'm also likely to accept freelance work, depending on my availability. I also like to contribute to open-source projects in my spare time.</span>
         </h3>
       </div>
 
@@ -69,7 +69,7 @@
         <h3>
           <span style="color:#B5D045"><b>translations</b></span>
           <br>
-          <span>I speak Portuguese and English fluently, and I'm currently learning German. I've helped translate projects such as Popcorn Time, plug.dj, Reddit and Tomahawk to Portuguese.</span>
+          <span id="translations-text">I speak Portuguese and English fluently, and I'm currently learning German. I've helped translate projects such as Popcorn Time, plug.dj, Reddit and Tomahawk to Portuguese.</span>
         </h3>
       </div>
 
@@ -77,7 +77,7 @@
         <h3>
           <span style="color:#FB8335"><b>experience</b></span>
           <br>
-          <span>I have built some interesting projects, going from real-time web chats to full desktop applications. I have also contributed to various open-source projects, including games and libraries.</span>
+          <span id="experience-text">I have built some interesting projects, going from real-time web chats to full desktop applications. I have also contributed to various open-source projects, including games and libraries.</span>
         </h3>
       </div>
 
@@ -85,7 +85,7 @@
         <h3>
           <span style="color:#81C0C5"><b>skills</b></span>
           <br>
-          <span>I work mostly with Javascript, using the MEAN Stack (MongoDB, Express, Angular & Node.JS), but I also have average experience with C++ and other languages. I use Linux and Sublime Text + Git for development.</span>
+          <span id="skills-text">I work mostly with Javascript, using the MEAN Stack (MongoDB, Express, Angular & Node.JS), but I also have average experience with C++ and other languages. I use Linux and Sublime Text + Git for development.</span>
         </h3>
       </div>
     </div>
@@ -101,6 +101,8 @@
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="js/particles.js"></script>
+    <script src="https://cdn.rawgit.com/namuol/cheet.js/master/cheet.min.js" type="text/javascript"></script>
+    <script src="js/main.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
