--- a/index.html
+++ b/index.html
@@ -1,113 +1,276 @@
 <!DOCTYPE html>
-<html itemscope itemtype="http://schema.org/Person">
+<html lang="en-US" itemscope itemtype="http://schema.org/Person">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Igor Antun</title>
 
-    <meta name="author" content="Igor Antun">
-    <meta name="description" content="An experienced front & backend developer and translator.">
+    <meta name="description" content="Front & backend developer and translator.">
 
     <link rel="shortcut icon" href="img/profile.jpg" type="img/icon">
-    <meta name="theme-color" content="#131314">
+    <meta name="theme-color"  content="#131314">
 
-    <meta property="og:title" content="Igor Antun"/>
-    <meta property="og:type" content="profile"/>
-    <meta property="og:url" content="http://igorantun.com/"/>
-    <meta property="og:site_name" content="Igor Antun"/>
+    <meta property="og:title"       content="Igor Antun"/>
+    <meta property="og:type"        content="profile"/>
+    <meta property="og:url"         content="http://igorantun.com/"/>
+    <meta property="og:site_name"   content="Igor Antun"/>
     <meta property="og:description" content="An experienced front & backend developer and translator."/>
-    <meta property="og:image" content="http://igorantun.com/img/profile.jpg"/>
+    <meta property="og:image"       content="http://igorantun.com/img/profile.jpg"/>
 
     <meta property="fb:profile_id" content="100001296438887"/>
-    <meta property="fb:admins" content="100001296438887"/>
+    <meta property="fb:admins"     content="100001296438887"/>
 
-    <meta itemprop="name" content="Igor Antun">
+    <link href="https://plus.google.com/u/0/115287270515856885838" rel="publisher">
+    <meta itemprop="name"        content="Igor Antun">
     <meta itemprop="description" content="An experienced front & backend developer and translator.">
-    <meta itemprop="image" content="http://igorantun.com/img/profile.jpg">
+    <meta itemprop="image"       content="http://igorantun.com/img/profile.jpg">
 
-    <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:site" content="@igorantun"/>
-    <meta name="twitter:creator" content="@igorantun"/>
-    <meta name="twitter:title" content="Igor Antun"/>
+    <meta name="twitter:card"        content="summary"/>
+    <meta name="twitter:site"        content="@igorantun"/>
+    <meta name="twitter:creator"     content="@igorantun"/>
+    <meta name="twitter:title"       content="Igor Antun"/>
     <meta name="twitter:description" content="An experienced front & backend developer and translator."/>
-    <meta name="twitter:image" content="http://igorantun.com/img/profile.jpg"/>
+    <meta name="twitter:image"       content="http://igorantun.com/img/profile.jpg"/>
 
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700,300,100' type='text/css'>
 
     <link rel="stylesheet" href="css/simplegrid.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
   </head>
 
   <body>
-    <div id="bg"></div>
+    <div id="nav">
+      <span>MENU</span>
+      <a data-scroll class="red"          href="#intro">top</a>
+      <a data-scroll class="skills"       href="#skills">skills</a>
+      <a data-scroll class="github"       href="#projects">projects</a>
+      <a data-scroll class="jobs"         href="#work">work</a>
+      <a data-scroll class="proficiency"  href="#translations">translation</a>
+      <a data-scroll class="volunteering" href="#volunteer">volunteering</a>
+    </div>
 
     <div id="intro">
-      <img id="photo" src="img/profile.jpg"></img>
+      <img src="img/profile.jpg"></img>
       <div class="middle">
-        <h2><span id="name">Igor Antun</span> <span class="blinking-cursor">|</span></h2>
-        <h4 id="subtitle">programmer & translator</h4>
-        <div id="status">● NOT AVAILABLE FOR HIRE</div>
+        <h2><span>Igor Antun</span> <span class="blinking-cursor">|</span></h2>
+        <h4>programmer & translator</h4>
+        <div id="status">● AVAILABLE FOR HIRE</div>
+        <a href="mailto:igor@antun.me">igor@antun.me</a>
+      </div>
+      <div class="middle menu">
+        <h4><a data-scroll style="border-bottom: solid 1px" href="#work">Résumé</a></h4>
+        <h4><a target="_blank" href="https://github.com/IgorAntun">GitHub</a></h4>
+        <h4><a target="_blank" href="https://linkedin.com/in/igorantun">LinkedIn</a></h4>
+        <h4><a target="_blank" href="https://stackoverflow.com/users/4677119/igor-antun">StackOverflow</a></h4>
       </div>
     </div>
 
-    <div id="description">
-      <h3><span><b>Hello!</b> I'm an experienced front & backend developer and translator based in Brazil. How may I help you?</span></h3>
+    <div class="container">
+      <div class="section row">
+        <div id="skills" class="col-1-3">
+          <h1>Experience & Skills</h1>
+          <div class="ref"><a target="_blank" href="https://github.com/IgorAntun/">+ GitHub Profile</a></div>
+          <div class="ref"><a target="_blank" href="https://stackoverflow.com/users/4677119/igor-antun">+ StackOverflow Profile</a></div>
+        </div>
+
+        <div class="col-2-3">
+          <hr>
+          <h2>Frontend Development</h2>
+          <p class="description">HTML, EJS, Bootstrap, Jade <span class="level skills">★★★★★</span></p>
+          <p class="description">CSS, Sass                  <span class="level skills">★★★★</span></p>
+          <p class="description">Javascript, jQuery         <span class="level skills">★★★★★</span></p>
+          <p class="description">Angular                    <span class="level skills">★★★</span></p>
+          <p class="description">Gulp, Grunt                <span class="level skills">★★★★</span></p>
+
+          <hr>
+
+          <h2>Backend Development</h2>
+          <p class="description">Node.JS   <span class="level skills">★★★★★</span></p>
+          <p class="description">MongoDB   <span class="level skills">★★★★</span></p>
+          <p class="description">RethinkDB <span class="level skills">★★★</span></p>
+          <p class="description">C++       <span class="level skills">★★</span></p>
+          <p class="description">Python    <span class="level skills">★★</span></p>
+
+          <hr>
+
+          <h2>Other Skills</h2>
+          <p class="description">Git (Github, Bitbucket, Gitlab) <span class="level skills">★★★★</span></p>
+          <p class="description">System Administration (Linux)   <span class="level skills">★★★</span></p>
+          <p class="description">AWS, DigitalOcean, Heroku       <span class="level skills">★★★★</span></p>
+          <p class="description">Trello, JIRA, Asana             <span class="level skills">★★★★</span></p>
+          <p class="description">Electron, nw.js                 <span class="level skills">★★★★</span></p>
+          <p class="description">Google Analytics                <span class="level skills">★★★</span></p>
+          <p class="description">Websockets                      <span class="level skills">★★★★</span></p>
+          <hr>
+        </div>
+      </div>
+      <div class="section row">
+        <div id="projects" class="col-1-3">
+          <h1>Projects & Repositories</h1>
+          <div class="ref"><a target="_blank" href="https://github.com/IgorAntun/">+ GitHub Profile</a></div>
+        </div>
+
+        <div class="col-2-3">
+          <hr>
+          <h2>
+            <a target="_blank" href="https://github.com/IgorAntun/node-chat">node-chat</a>
+            <span class="level github">292 stars & 119 forks</span>
+            </h2>
+          <p class="techs">Express, EJS, Websockets and Material Design</p>
+          <p class="description">A NodeJS powered chat application that supports emoji, links, and much more. It has powerful administrator utilities, such as promoting/demoting other users to different admin roles, muting, kicking and banning people.</p>
+
+          <hr>
+
+          <h2>
+            <a target="_blank" href="https://github.com/IgorAntun/node-slack-irc">node-slack-irc</a>
+            <span class="level github">14 stars & 4 forks</span>
+          </h2>
+          <p class="techs">Node, Slack Integrations and IRC</p>
+          <p class="description">A NodeJS bridge for integrating Slack and IRC channels, by allowing messages to be sent from both sides and integrating them seamlessly.</p>
+
+          <hr>
+
+          <h2>
+            <a target="_blank" href="https://github.com/IgorAntun/unsplashify">unsplashify</a>
+            <span class="level github">8 stars & 3 forks</span>
+          </h2>
+          <p class="techs">Electron, Public APIs and Material Design</p>
+          <p class="description">A desktop app made with NodeJS and Electron that gets images from Unsplash and make them easily available for you to set as your wallpaper.</p>
+
+          <hr>
+
+          <h2>
+            <a target="_blank" href="https://github.com/IgorAntun/deskplug">deskplug</a>
+            <span class="level github">5 stars & 1 fork</span>
+          </h2>
+          <p class="techs">Electron, plug.dj APIs and Websockets</p>
+          <p class="description">[To be written]</p>
+
+          <hr>
+
+          <h2>
+            <a target="_blank" href="https://github.com/IgorAntun/resume">resume</a>
+            <span class="level github">2 stars & 1 fork</span>
+          </h2>
+          <p class="techs">HTML5, CSS3 and Javascript</p>
+          <p class="description">[To be written]</p>
+          <hr>
+        </div>
+      </div>
+      <div class="section row">
+        <div id="work" class="col-1-3">
+          <h1>Work Experience</h1>
+          <div class="ref"><a target="_blank" href="https://linkedin.com/in/igorantun">+ LinkedIn Profile</a></div>
+        </div>
+
+        <div class="col-2-3">
+          <hr>
+          <h2>
+            <a target="_blank" href="http://meu.guru">meu.guru</a>
+            <span class="level jobs">October 2015 - Present</span>
+          </h2>
+          <p class="techs">CTO & Backend Engineer</p>
+          <p class="description">[To be written]</p>
+
+          <hr>
+
+          <h2>
+            <a target="_blank" href="http://www.homest.com.br/new/">Homest</a>
+            <span class="level jobs">February 2016 - August 2016</span>
+          </h2>
+          <p class="techs">Freelance Fullstack Developer</p>
+          <p class="description">[To be written]</p>
+
+          <hr>
+
+          <h2>
+            <a target="_blank" href="http://www.syligo.com/">Syligo</a>
+            <span class="level jobs">September 2015 - August 2016</span>
+          </h2>
+          <p class="techs">Freelance Fullstack Developer</p>
+          <p class="description">[To be written]</p>
+
+          <hr>
+
+          <h2>
+            Vitrineed
+            <span class="level jobs">December 2014 - August 2015</span>
+          </h2>
+          <p class="techs">Freelance Fullstack Developer</p>
+          <p class="description">Vitrineed was an website/app where you could find the best clothing options in the market with the best prices. By indexing products from various e-commerces in a single, accessible place, clients could make the best decision when buying clothing products.</p>
+          <hr>
+        </div>
+      </div>
+      <div class="section row">
+        <div id="translations" class="col-1-3">
+          <h1>Languages & Translations</h1>
+          <div class="ref"><a target="_blank" href="https://crowdin.com/profile/igorantunc">+ Crowdin Profile</a></div>
+          <div class="ref"><a target="_blank" href="https://www.transifex.com/user/profile/IgorAntun/">+ Transifex Profile</a></div>
+        </div>
+
+        <div class="col-2-3">
+          <hr>
+          <h2>Portuguese <span class="level proficiency">Native Proficiency</span></h2>
+          <br>
+          <h2>English <span class="level proficiency">Bilingual Proficiency</span></h2>
+
+          <hr>
+
+          <h2>Spanish <span class="level proficiency">Limited Working Proficiency</span></h2>
+          <br>
+          <h2>German <span class="level proficiency">Elementary Proficiency</span></h2>
+
+          <hr>
+
+          <h2>Translations <span class="level proficiency">English to Portuguese</span></h2>
+          <p class="description"><a target="_blank" href="https://bitbucket.org/">Bitbucket</a></p>
+          <p class="description"><a target="_blank" href="http://butterproject.org/">Butter Project</a></p>
+          <p class="description"><a target="_blank" href="https://plug.dj/">plug.dj</a></p>
+          <p class="description"><a target="_blank" href="https://popcorntime.sh/">PopcornTime</a></p>
+          <p class="description"><a target="_blank" href="https://www.reddit.com/">Reddit</a></p>
+          <p class="description"><a target="_blank" href="https://www.tomahawk-player.org/">Tomahawk Player</a></p>
+          <hr>
+        </div>
+      </div>
+      <div class="section row">
+        <div id="volunteer" class="col-1-3"><h1>Volunteering</h1></div>
+
+        <div class="col-2-3">
+          <hr>
+          <h2>
+            <a target="_blank" href="https://www.rotary.org/myrotary/en/exchange-ideas/club-connections/interact-clubs">Interact Club</a>
+            <span class="level volunteering">September 2015 - Present</span>
+          </h2>
+          <p class="description">Local Club President - Rotary Sponsored Club</p>
+
+          <br>
+
+          <h2>
+            <a target="_blank" href="https://plug.dj/">plug.dj</a>
+            <span class="level volunteering">April 2014 - October 2015</span>
+          </h2>
+          <p class="description">Brand Ambassador</p>
+          <hr>
+        </div>
+      </div>
     </div>
 
-    <div class="grid grid-pad texts">
-      <div class="col-1-4">
-        <h3>
-          <span style="color:#F3C110"><b>work</b></span>
-          <br>
-          <span id="work-text">I work mostly as a part-time developer, but I'm also likely to accept freelance work, depending on my availability. I also like to contribute to open-source projects in my spare time.</span>
-        </h3>
-      </div>
-
-      <div class="col-1-4">
-        <h3>
-          <span style="color:#B5D045"><b>translations</b></span>
-          <br>
-          <span id="translations-text">I speak Portuguese and English fluently, and I'm currently learning German. I've helped translate projects such as Popcorn Time, plug.dj, Reddit and Tomahawk to Portuguese.</span>
-        </h3>
-      </div>
-
-      <div class="col-1-4">
-        <h3>
-          <span style="color:#FB8335"><b>experience</b></span>
-          <br>
-          <span id="experience-text">I have built some interesting projects, going from real-time web chats to full desktop applications. I have also contributed to various open-source projects, including games and libraries.</span>
-        </h3>
-      </div>
-
-      <div class="col-1-4">
-        <h3>
-          <span style="color:#81C0C5"><b>skills</b></span>
-          <br>
-          <span id="skills-text">I work mostly with Javascript, using the MEAN Stack (MongoDB, Express, Angular & Node.JS), but I also have average experience with C++ and other languages. I use Linux and Sublime Text + Git for development.</span>
-        </h3>
-      </div>
-    </div>
-
-    <div id="social">
-      <a id="facebook" target="_blank" href="https://facebook.com/igorantun">Facebook</a>
-      <a id="github" target="_blank" href="https://github.com/IgorAntun">Github</a>
-      <a id="linkedin" target="_blank" href="https://linkedin.com/in/igorantun">LinkedIn</a>
-      <a id="stackoverflow" target="_blank" href="https://stackoverflow.com/users/4677119/igor-antun">Stack Overflow</a>
+    <div id="end">
+      <div><a data-scroll href="#intro" class="red">go to top</a></div>
       <br>
-      <a style="color:#b19cd9" target="_blank" href="mailto:hello@igorantun.com">hello at igorantun dot com</a>
+      <div>made with <span class="red">❤</span> by igor antun</div>
+      <br>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="js/particles.js"></script>
-    <script src="https://cdn.rawgit.com/namuol/cheet.js/master/cheet.min.js" type="text/javascript"></script>
-    <script src="js/main.js"></script>
+    <script src="js/smooth-scroll.min.js"></script>
+    <script>smoothScroll.init();</script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-55923309-1', 'auto');
       ga('send', 'pageview');
     </script>
