--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <meta name="twitter:image"       content="http://igorantun.com/img/profile.jpg"/>
 
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
-
-    <link rel="stylesheet" href="css/simplegrid.css" type="text/css">
+    <link rel="stylesheet" href="css/akali.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
   </head>
 
@@ -69,13 +68,13 @@
 
     <div class="container">
       <div class="section row">
-        <div id="skills" class="col-1-3">
+        <div id="skills" class="four wide on computer twelve wide on mobile column">
           <h1>Experience & Skills</h1>
           <div class="ref"><a target="_blank" href="https://github.com/IgorAntun/">+ GitHub Profile</a></div>
           <div class="ref"><a target="_blank" href="https://stackoverflow.com/users/4677119/igor-antun">+ StackOverflow Profile</a></div>
         </div>
 
-        <div class="col-2-3">
+        <div class="eight wide on computer twelve wide on mobile column">
           <hr>
           <h2>Frontend Development</h2>
           <p class="description">HTML, EJS, Bootstrap, Jade <span class="level skills">★★★★★</span></p>
@@ -107,12 +106,12 @@
         </div>
       </div>
       <div class="section row">
-        <div id="projects" class="col-1-3">
+        <div id="projects" class="four wide on computer twelve wide on mobile column">
           <h1>Projects & Repositories</h1>
           <div class="ref"><a target="_blank" href="https://github.com/IgorAntun/">+ GitHub Profile</a></div>
         </div>
 
-        <div class="col-2-3">
+        <div class="eight wide on computer twelve wide on mobile column">
           <hr>
           <h2>
             <a target="_blank" href="https://github.com/IgorAntun/node-chat">node-chat</a>
@@ -160,12 +159,12 @@
         </div>
       </div>
       <div class="section row">
-        <div id="work" class="col-1-3">
+        <div id="work" class="four wide on computer twelve wide on mobile column">
           <h1>Work Experience</h1>
           <div class="ref"><a target="_blank" href="https://linkedin.com/in/igorantun">+ LinkedIn Profile</a></div>
         </div>
 
-        <div class="col-2-3">
+        <div class="eight wide on computer twelve wide on mobile column">
           <hr>
           <h2>
             <a target="_blank" href="http://meu.guru">meu.guru</a>
@@ -204,13 +203,13 @@
         </div>
       </div>
       <div class="section row">
-        <div id="translations" class="col-1-3">
+        <div id="translations" class="four wide on computer twelve wide on mobile column">
           <h1>Languages & Translations</h1>
           <div class="ref"><a target="_blank" href="https://crowdin.com/profile/igorantunc">+ Crowdin Profile</a></div>
           <div class="ref"><a target="_blank" href="https://www.transifex.com/user/profile/IgorAntun/">+ Transifex Profile</a></div>
         </div>
 
-        <div class="col-2-3">
+        <div class="eight wide on computer twelve wide on mobile column">
           <hr>
           <h2>Portuguese <span class="level proficiency">Native Proficiency</span></h2>
           <br>
@@ -235,9 +234,9 @@
         </div>
       </div>
       <div class="section row">
-        <div id="volunteer" class="col-1-3"><h1>Volunteering</h1></div>
+        <div id="volunteer" class="four wide on computer twelve wide on mobile column"><h1>Volunteering</h1></div>
 
-        <div class="col-2-3">
+        <div class="eight wide on computer twelve wide on mobile column">
           <hr>
           <h2>
             <a target="_blank" href="https://www.rotary.org/myrotary/en/exchange-ideas/club-connections/interact-clubs">Interact Club</a>
