--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="mailto:igor@antun.me">igor@antun.me</a>
       </div>
       <div class="middle menu">
-        <h4><a data-scroll style="border-bottom: solid 1px" href="#work">Résumé</a></h4>
+        <h4><a data-scroll style="border-bottom: solid 1px" href="#skills">Résumé</a></h4>
         <h4><a target="_blank" href="https://github.com/IgorAntun">GitHub</a></h4>
         <h4><a target="_blank" href="https://linkedin.com/in/igorantun">LinkedIn</a></h4>
         <h4><a target="_blank" href="https://stackoverflow.com/users/4677119/igor-antun">StackOverflow</a></h4>
