--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div id="intro">
-      <img src="img/profile.jpg"></img>
+      <img src="img/profile.min.jpg"></img>
       <div class="middle">
         <h2><span>Igor Antun</span> <span class="blinking-cursor">|</span></h2>
         <h4>programmer & translator</h4>
@@ -265,7 +265,7 @@
 
     <script src="js/smooth-scroll.min.js"></script>
     <script>smoothScroll.init();</script>
-    
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
