Transfered CSS to CDNs

--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
       <br>
     </div>
 
-    <link rel="stylesheet" href="css/akali.css" type="text/css">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/meu-guru/akali-grid/master/dist/akali-grid.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/IgorAntun/igorantun.github.io/master/css/main.css" type="text/css">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
 
     <script src="js/smooth-scroll.min.js"></script>
