--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <meta name="twitter:title"       content="Igor Antun"/>
     <meta name="twitter:description" content="An experienced front & backend developer and translator."/>
     <meta name="twitter:image"       content="http://igorantun.com/img/profile.jpg"/>
-    
-    <link rel="stylesheet" href="https://cdn.rawgit.com/IgorAntun/igorantun.github.io/master/css/main.css" type="text/css">
+
+    <link rel="stylesheet" href="css/main.css" type="text/css">
   </head>
 
   <body>
@@ -51,16 +51,16 @@
     <div id="intro">
       <img src="img/profile.min.jpg"></img>
       <div class="middle">
-        <h2><span>Igor Antun</span> <span class="blinking-cursor">|</span></h2>
-        <h4>programmer & translator</h4>
+        <h1>Igor Antun <span class="blinking-cursor">|</span></h1>
+        <h2>programmer & translator</h2>
         <div id="status">● AVAILABLE FOR HIRE</div>
         <a href="mailto:igor@antun.me">igor@antun.me</a>
       </div>
       <div class="middle menu">
-        <h4><a data-scroll style="border-bottom: solid 1px" href="#skills">Résumé</a></h4>
-        <h4><a target="_blank" href="https://github.com/IgorAntun">GitHub</a></h4>
-        <h4><a target="_blank" href="https://linkedin.com/in/igorantun">LinkedIn</a></h4>
-        <h4><a target="_blank" href="https://stackoverflow.com/users/4677119/igor-antun">StackOverflow</a></h4>
+        <a data-scroll     href="#skills">Résumé</a>
+        <a target="_blank" href="https://github.com/IgorAntun">GitHub</a>
+        <a target="_blank" href="https://linkedin.com/in/igorantun">LinkedIn</a>
+        <a target="_blank" href="https://stackoverflow.com/users/4677119/igor-antun">StackOverflow</a>
       </div>
     </div>
 
