--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/meu-guru/akali-grid/master/dist/akali-grid.css" type="text/css">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
 
-    <script src="js/smooth-scroll.min.js"></script>
+    <script src="https://cdn.rawgit.com/cferdinandi/smooth-scroll/master/dist/js/smooth-scroll.min.js"></script>
     <script>smoothScroll.init();</script>
 
     <script>
