--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" itemscope itemtype="http://schema.org/Person">
+<html lang="en-US" itemscope itemtype="https://schema.org/Person">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -17,7 +17,7 @@
     <meta property="og:url"         content="http://igorantun.com/"/>
     <meta property="og:site_name"   content="Igor Antun"/>
     <meta property="og:description" content="An experienced front & backend developer and translator."/>
-    <meta property="og:image"       content="http://igorantun.com/img/profile.jpg"/>
+    <meta property="og:image"       content="https://igorantun.com/img/profile.jpg"/>
 
     <meta property="fb:profile_id" content="100001296438887"/>
     <meta property="fb:admins"     content="100001296438887"/>
@@ -25,14 +25,14 @@
     <link href="https://plus.google.com/u/0/115287270515856885838" rel="publisher">
     <meta itemprop="name"        content="Igor Antun">
     <meta itemprop="description" content="An experienced front & backend developer and translator.">
-    <meta itemprop="image"       content="http://igorantun.com/img/profile.jpg">
+    <meta itemprop="image"       content="https://igorantun.com/img/profile.jpg">
 
     <meta name="twitter:card"        content="summary"/>
     <meta name="twitter:site"        content="@igorantun"/>
     <meta name="twitter:creator"     content="@igorantun"/>
     <meta name="twitter:title"       content="Igor Antun"/>
     <meta name="twitter:description" content="An experienced front & backend developer and translator."/>
-    <meta name="twitter:image"       content="http://igorantun.com/img/profile.jpg"/>
+    <meta name="twitter:image"       content="https://igorantun.com/img/profile.jpg"/>
 
     <link rel="stylesheet" href="css/main.css" type="text/css">
   </head>
@@ -262,7 +262,7 @@
     </div>
 
     <link rel="stylesheet" href="https://cdn.rawgit.com/meu-guru/akali-grid/master/dist/akali-grid.css" type="text/css">
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Varela+Round' type='text/css'>
 
     <script src="https://cdn.rawgit.com/cferdinandi/smooth-scroll/master/dist/js/smooth-scroll.min.js"></script>
     <script>smoothScroll.init();</script>
@@ -271,7 +271,7 @@
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-55923309-1', 'auto');
       ga('send', 'pageview');
     </script>
