--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
     <div class="container">
       <div class="section row">
-        <div id="skills" class="four wide on computer twelve wide on mobile column">
+        <div id="skills" class="four wide on desktop twelve wide on mobile column">
           <h1>Experience & Skills</h1>
           <div class="ref"><a target="_blank" href="https://github.com/IgorAntun/">+ GitHub Profile</a></div>
           <div class="ref"><a target="_blank" href="https://stackoverflow.com/users/4677119/igor-antun">+ StackOverflow Profile</a></div>
         </div>
 
-        <div class="eight wide on computer twelve wide on mobile column">
+        <div class="eight wide on desktop twelve wide on mobile column">
           <hr>
           <h2>Frontend Development</h2>
           <p class="description">HTML, EJS, Bootstrap, Jade <span class="level skills">★★★★★</span></p>
