--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
         </div>
       </div>
       <div class="section row">
-        <div id="projects" class="four wide on computer twelve wide on mobile column">
+        <div id="projects" class="four wide on desktop twelve wide on mobile column">
           <h1>Projects & Repositories</h1>
           <div class="ref"><a target="_blank" href="https://github.com/IgorAntun/">+ GitHub Profile</a></div>
         </div>
 
-        <div class="eight wide on computer twelve wide on mobile column">
+        <div class="eight wide on desktop twelve wide on mobile column">
           <hr>
           <h2>
             <a target="_blank" href="https://github.com/IgorAntun/node-chat">node-chat</a>
@@ -157,12 +157,12 @@
         </div>
       </div>
       <div class="section row">
-        <div id="work" class="four wide on computer twelve wide on mobile column">
+        <div id="work" class="four wide on desktop twelve wide on mobile column">
           <h1>Work Experience</h1>
           <div class="ref"><a target="_blank" href="https://linkedin.com/in/igorantun">+ LinkedIn Profile</a></div>
         </div>
 
-        <div class="eight wide on computer twelve wide on mobile column">
+        <div class="eight wide on desktop twelve wide on mobile column">
           <hr>
           <h2>
             <a target="_blank" href="http://meu.guru">meu.guru</a>
@@ -201,13 +201,13 @@
         </div>
       </div>
       <div class="section row">
-        <div id="translations" class="four wide on computer twelve wide on mobile column">
+        <div id="translations" class="four wide on desktop twelve wide on mobile column">
           <h1>Languages & Translations</h1>
           <div class="ref"><a target="_blank" href="https://crowdin.com/profile/igorantunc">+ Crowdin Profile</a></div>
           <div class="ref"><a target="_blank" href="https://www.transifex.com/user/profile/IgorAntun/">+ Transifex Profile</a></div>
         </div>
 
-        <div class="eight wide on computer twelve wide on mobile column">
+        <div class="eight wide on desktop twelve wide on mobile column">
           <hr>
           <h2>Portuguese <span class="level proficiency">Native Proficiency</span></h2>
           <br>
@@ -232,9 +232,9 @@
         </div>
       </div>
       <div class="section row">
-        <div id="volunteer" class="four wide on computer twelve wide on mobile column"><h1>Volunteering</h1></div>
+        <div id="volunteer" class="four wide on desktop twelve wide on mobile column"><h1>Volunteering</h1></div>
 
-        <div class="eight wide on computer twelve wide on mobile column">
+        <div class="eight wide on desktop twelve wide on mobile column">
           <hr>
           <h2>
             <a target="_blank" href="https://www.rotary.org/myrotary/en/exchange-ideas/club-connections/interact-clubs">Interact Club</a>
