No more nonsense

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class='section row'>
         <div id='bio' class='twelve wide column'>
           <h1>About Me</h1>
-          <h2>use the menu to get details</h2>
+          <h2 id='details'>use the menu to get details</h2>
         </div>
 
         <div class='twelve wide column'>
