--- a/index.html
+++ b/index.html
@@ -359,7 +359,10 @@
         </div>
       </div>
       <div class='section row'>
-        <div id='contact' class='four wide on desktop twelve wide on mobile column'><h1>Contact Information</h1></div>
+        <div id='contact' class='four wide on desktop twelve wide on mobile column'>
+          <h1>Contact Information</h1>
+          <div class='ref' style='margin-top:-15px;color:#B5D045'>+ AVAILABLE FOR HIRE</div>
+        </div>
 
         <div class='eight wide on desktop twelve wide on mobile column'>
           <hr>
