--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
     <meta name='twitter:image'       content='https://igorantun.com/img/profile.jpg'/>
 
     <link rel='stylesheet' href='css/main.css' type='text/css'>
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55923309-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-55923309-1');
+    </script>
   </head>
 
   <body>
@@ -402,14 +411,5 @@
 
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@14/dist/smooth-scroll.polyfills.min.js"></script>
     <script>var scroll = new SmoothScroll('a[href*="#"]');</script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-55923309-1', 'auto');
-      ga('send', 'pageview');
-    </script>
   </body>
 </html>
